Sites added. Activities in preparation. Vessels need to be expanded still.

--- a/Example 21 - Automatically generated sites and activities.ipynb
+++ b/Example 21 - Automatically generated sites and activities.ipynb
@@ -42,8 +42,7 @@
     "import datetime\n",
     "import json\n",
     "import uuid\n",
-    "import platform\n",
-    "\n",
+    "import platformçµ\n",
     "\n",
     "# you need these dependencies (you can get these from anaconda)\n",
     "# package(s) related to the simulation\n",
@@ -129,8 +128,6 @@
     "class Move(object):\n",
     "    \"\"\"Move class\n",
     "    \n",
-    "    origin: origin of trip\n",
-    "    destination: destination of trip\n",
     "    v_empty: speed empty [m/s]\n",
     "    v_full: speed full [m/s]\n",
     "    resource: a simpy resource that can be requested\"\"\"\n",
@@ -151,12 +148,7 @@
     "        yield the time it takes to travel it\"\"\"\n",
     "        orig = shapely.geometry.asShape(origin.geometry)\n",
     "        dest = shapely.geometry.asShape(destination.geometry)\n",
-    "        print('computing distance')\n",
     "        forward, backward, distance = self.wgs84.inv(orig.x, orig.y, dest.x, dest.y)\n",
-    "        print('distance', distance)\n",
-    "        print('condition', self.container.level == self.container.capacity)\n",
-    "        print('distance / self.v_full', distance / self.v_full)\n",
-    "        print('distance / self.v_empty', distance / self.v_empty)\n",
     "\n",
     "        if self.container.level == self.container.capacity:\n",
     "            yield self.env.timeout(distance / self.v_full)\n",
@@ -182,8 +174,6 @@
     "    \"\"\"Process class\n",
     "    \n",
     "    resource: a simpy resource that can be requested\n",
-    "    origin: object with simpy Container from which to get (can be Site or Vessel)\n",
-    "    destination: object with simpy Container in which to put (can be Site or Vessel)\n",
     "    rate: rate with which quantity can be processed [amount/s]\n",
     "    amount: amount to process\"\"\"\n",
     "\n",
@@ -198,12 +188,12 @@
     "        self.amount=amount\n",
     "        \n",
     "    def execute_process(self, origin, destination, amount):\n",
-    "        \"\"\"get amount from origin container,\n",
-    "        put amount in destination continater, and\n",
-    "        yield the time it takes to process it\"\"\"\n",
+    "        \"\"\"get amount from origin container, put amount in destination continater, \n",
+    "        and yield the time it takes to process it\"\"\"\n",
     "        origin.container.get(amount)\n",
     "        destination.container.put(amount)\n",
     "        yield self.env.timeout(amount / self.rate)\n",
+    "        \n",
     "        origin.log_entry('', self.env.now, origin.container.level)\n",
     "        destination.log_entry('', self.env.now, destination.container.level)\n",
     "        \n",
@@ -306,16 +296,15 @@
    "source": [
     "class Installation(Identifiable):\n",
     "    \"\"\"The Installation Class forms a spefic class of activities with associated methods that can \n",
-    "    initiate and suspend processes according to a number of specified conditions. \n",
-    "    \n",
-    "    This class deals with transport and installation/placement of discrete and continuous objects.\n",
+    "    initiate and suspend processes according to a number of specified conditions. This class deals \n",
+    "    with transport and installation/placement of discrete and continuous objects.\n",
     "    \n",
     "    condition: expression that states when to initiate or to suspend activity\n",
     "    origin: object with simpy Container from which to get (can be Site or Vessel)\n",
     "    destination: object with simpy Container in which to put (can be Site or Vessel)\n",
-    "    loader: gets amount from origin Contaner and puts it into mover Container\n",
-    "    mover: moves amount in Container from origin to destination\n",
-    "    unloader: gets amount from mover Contaner and puts it into destination Container\"\"\"\n",
+    "    loader: gets amount from 'origin' Container and puts it into 'mover' Container\n",
+    "    mover: moves amount in Container from 'origin' to 'destination'\n",
+    "    unloader: gets amount from 'mover' Container and puts it into 'destination' Container\"\"\"\n",
     "\n",
     "    def __init__(self, \n",
     "                 condition,\n",
@@ -326,10 +315,8 @@
     "        \"\"\"Initialization\"\"\"\n",
     "        \n",
     "        self.condition = condition\n",
-    "        \n",
     "        self.origin = origin\n",
     "        self.destination = destination\n",
-    "        \n",
     "        self.loader = loader\n",
     "        self.mover = mover\n",
     "        self.unloader = unloader\n",
@@ -339,13 +326,11 @@
     "                             condition,\n",
     "                             origin, destination,\n",
     "                             loader, mover, unloader))\n",
-    "\n",
     "        self.installation_proc = env.process(\n",
     "            self.installation_process_control(env,\n",
     "                             condition,\n",
     "                             origin, destination,\n",
     "                             loader, mover, unloader))\n",
-    "\n",
     "        self.installation_reactivate = env.event()\n",
     "\n",
     "    def standing_by(self, env, condition,\n",
@@ -358,7 +343,7 @@
     "            if not shown:\n",
     "                print('T=' + '{:06.2f}'.format(env.now) + ' ' + self.name + ' to ' + destination.name + ' suspended')\n",
     "                shown = True\n",
-    "            yield env.timeout(3600) # step 1 time unit ahead\n",
+    "            yield env.timeout(3600) # step 3600 time units ahead\n",
     "\n",
     "        print('T=' + '{:06.2f}'.format(env.now) + ' ' + 'Condition: ' + condition + ' is satisfied')\n",
     "\n",
@@ -378,7 +363,6 @@
     "                                                 origin, destination,\n",
     "                                                 loader, mover, unloader)\n",
     "\n",
-    "    \n",
     "    def installation_process(self, env, condition,\n",
     "                                   origin, destination,\n",
     "                                   loader, mover, unloader):\n",
@@ -520,11 +504,14 @@
     "stock_04 = Site(**data_stock_04)\n",
     "Sites.append(stock_04)\n",
     "\n",
-    "# *** Generate placemnet sites\n",
-    "start = [5.051984474450297,52.9389114955695] # Den Oever \n",
-    "#stop = [5.201697426528369,53.01679552959467] # Breezanddijk \n",
-    "stop = [5.294441318495398,53.06556661924486] # Kornwerderzand\n",
+    "# *** Generate placement sites\n",
+    "# - Clay layer\n",
+    "layer_name = '_clay'\n",
+    "capacity = 5000\n",
+    "level = 0\n",
     "nums = 20\n",
+    "start = [5.054676856441372,52.94042293840172] # Den Oever \n",
+    "stop = [5.294877712236641,53.06686424241725] # Kornwerderzand\n",
     "\n",
     "# - generate a 'nums' amount of sites between the selected start and stop points\n",
     "lats = np.linspace(start[0], stop[0], num=nums)\n",
@@ -534,12 +521,81 @@
     "for i in range(nums):\n",
     "    # - sites in database (nr indicates km's from Den Oever haven)\n",
     "    data_site = {\"env\": env,\n",
-    "                \"name\": \"KP\" + format(i,'02.0f'), \"geometry\": geojson.Point([lats[i], lons[i]]),\n",
-    "                \"capacity\": 5000, \"level\": 0}\n",
+    "                \"name\": \"KP\" + format(i,'02.0f') + layer_name, \"geometry\": geojson.Point([lats[i], lons[i]]),\n",
+    "                \"capacity\": capacity, \"level\": level}\n",
     "    \n",
     "    # - create site objects\n",
-    "    vars()['Site_' + \"KP\" + format(i,'02.0f')] = Site(**data_site)\n",
-    "    Sites.append(vars()['Site_' + \"KP\" + format(i,'02.0f')])\n"
+    "    vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name] = Site(**data_site)\n",
+    "    Sites.append(vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name])\n",
+    "\n",
+    "# - Sand layer\n",
+    "layer_name = '_sand'\n",
+    "capacity = 5000\n",
+    "level = 0\n",
+    "nums = 20\n",
+    "start = [5.052051052879287,52.9421894472733] # Den Oever \n",
+    "stop = [5.292216781509101,53.06886359869087] # Kornwerderzand\n",
+    "\n",
+    "# - generate a 'nums' amount of sites between the selected start and stop points\n",
+    "lats = np.linspace(start[0], stop[0], num=nums)\n",
+    "lons = np.linspace(start[1], stop[1],  num=nums)\n",
+    "\n",
+    "# - option to create a range of sites between two points\n",
+    "for i in range(nums):\n",
+    "    # - sites in database (nr indicates km's from Den Oever haven)\n",
+    "    data_site = {\"env\": env,\n",
+    "                \"name\": \"KP\" + format(i,'02.0f') + layer_name, \"geometry\": geojson.Point([lats[i], lons[i]]),\n",
+    "                \"capacity\": capacity, \"level\": level}\n",
+    "    \n",
+    "    # - create site objects\n",
+    "    vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name] = Site(**data_site)\n",
+    "    Sites.append(vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name])\n",
+    "\n",
+    "# - Armour layer\n",
+    "layer_name = '_armour'\n",
+    "capacity = 5000\n",
+    "level = 0\n",
+    "nums = 20\n",
+    "start = [5.049510554598302,52.94393628899332] # Den Oever \n",
+    "stop = [5.289636346490858,53.07053144816584] # Kornwerderzand\n",
+    "\n",
+    "# - generate a 'nums' amount of sites between the selected start and stop points\n",
+    "lats = np.linspace(start[0], stop[0], num=nums)\n",
+    "lons = np.linspace(start[1], stop[1],  num=nums)\n",
+    "\n",
+    "# - option to create a range of sites between two points\n",
+    "for i in range(nums):\n",
+    "    # - sites in database (nr indicates km's from Den Oever haven)\n",
+    "    data_site = {\"env\": env,\n",
+    "                \"name\": \"KP\" + format(i,'02.0f') + layer_name, \"geometry\": geojson.Point([lats[i], lons[i]]),\n",
+    "                \"capacity\": capacity, \"level\": level}\n",
+    "    \n",
+    "    # - create site objects\n",
+    "    vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name] = Site(**data_site)\n",
+    "    Sites.append(vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name])\n",
+    "\n",
+    "# - Levvel layer\n",
+    "layer_name = '_levvel'\n",
+    "capacity = 5000\n",
+    "level = 0\n",
+    "nums = 20\n",
+    "start = [5.046556507026805,52.94579445406793] # Den Oever \n",
+    "stop = [5.286775240694118,53.07264015015531] # Kornwerderzand\n",
+    "\n",
+    "# - generate a 'nums' amount of sites between the selected start and stop points\n",
+    "lats = np.linspace(start[0], stop[0], num=nums)\n",
+    "lons = np.linspace(start[1], stop[1],  num=nums)\n",
+    "\n",
+    "# - option to create a range of sites between two points\n",
+    "for i in range(nums):\n",
+    "    # - sites in database (nr indicates km's from Den Oever haven)\n",
+    "    data_site = {\"env\": env,\n",
+    "                \"name\": \"KP\" + format(i,'02.0f') + layer_name, \"geometry\": geojson.Point([lats[i], lons[i]]),\n",
+    "                \"capacity\": capacity, \"level\": level}\n",
+    "    \n",
+    "    # - create site objects\n",
+    "    vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name] = Site(**data_site)\n",
+    "    Sites.append(vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name])"
    ]
   },
   {
@@ -581,13 +637,7 @@
     "\n",
     "# - transport resources\n",
     "transport_barge_01 = Transport_Resource(**data_transport_barge_01)\n",
-    "transport_barge_02 = Transport_Resource(**data_transport_barge_02)\n",
-    "\n",
-    "# print the outputs\n",
-    "# print(gantry_crane.__dict__)\n",
-    "# print(transport_barge_01.__dict__)\n",
-    "# print(transport_barge_02.__dict__)\n",
-    "# print(installation_crane.__dict__)\n"
+    "transport_barge_02 = Transport_Resource(**data_transport_barge_02)\n"
    ]
   },
   {
@@ -606,30 +656,104 @@
     "# *** Define installation activities\n",
     "transport_barges=[]\n",
     "transport_barges.append(transport_barge_01)\n",
-    "#transport_barges.append(transport_barge_02)\n",
+    "transport_barges.append(transport_barge_02)\n",
     "\n",
+    "# Clay\n",
+    "layer_name = '_clay'\n",
     "for i in range(nums):\n",
     "    for transport_barge in transport_barges:\n",
     "        # - sites in database (nr i indicates km's from Den Oever haven)\n",
     "        if i==0:\n",
-    "            condition = \"'''Site_KP\" + format(i,'02.0f') + \".container.level<5000'''\"\n",
+    "            condition = \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\"\n",
     "            data_act = {\"env\": env,\n",
     "                    \"name\": \"Block placement\",\n",
-    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f')],\n",
+    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
     "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
     "                    \"condition\": eval(condition)}\n",
     "        else:\n",
-    "            condition = \"'''\" + eval(\"'''Site_KP\" + format(i,'02.0f') + \".container.level<5000'''\") + \\\n",
-    "                        ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + \".container.level==5000'''\") + \"'''\"\n",
+    "            condition = \"'''\" + eval(\"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\") + \\\n",
+    "                        ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + layer_name + \".container.level==5000'''\") + \"'''\"\n",
     "            data_act = {\"env\": env,\n",
     "                    \"name\": \"Block placement\",\n",
-    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f')],\n",
+    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
     "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
     "                    \"condition\": eval(condition)}\n",
     "\n",
     "        # - create site objects\n",
-    "        vars()['Act_' + format(i,'02.0f')] = Installation(**data_act)\n",
-    "    "
+    "        vars()['Act_' + format(i,'02.0f') + layer_name] = Installation(**data_act)\n",
+    "\n",
+    "# Sand\n",
+    "layer_name = '_sand'\n",
+    "for i in range(nums):\n",
+    "    for transport_barge in transport_barges:\n",
+    "        # - sites in database (nr i indicates km's from Den Oever haven)\n",
+    "        if i==0:\n",
+    "            condition = \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\"\n",
+    "            data_act = {\"env\": env,\n",
+    "                    \"name\": \"Block placement\",\n",
+    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
+    "                    \"condition\": eval(condition)}\n",
+    "        else:\n",
+    "            condition = \"'''\" + eval(\"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\") + \\\n",
+    "                        ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + layer_name + \".container.level==5000'''\") + \"'''\"\n",
+    "            data_act = {\"env\": env,\n",
+    "                    \"name\": \"Block placement\",\n",
+    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
+    "                    \"condition\": eval(condition)}\n",
+    "\n",
+    "        # - create site objects\n",
+    "        vars()['Act_' + format(i,'02.0f') + layer_name] = Installation(**data_act)\n",
+    "\n",
+    "# Armour\n",
+    "layer_name = '_armour'\n",
+    "for i in range(nums):\n",
+    "    for transport_barge in transport_barges:\n",
+    "        # - sites in database (nr i indicates km's from Den Oever haven)\n",
+    "        if i==0:\n",
+    "            condition = \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\"\n",
+    "            data_act = {\"env\": env,\n",
+    "                    \"name\": \"Block placement\",\n",
+    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
+    "                    \"condition\": eval(condition)}\n",
+    "        else:\n",
+    "            condition = \"'''\" + eval(\"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\") + \\\n",
+    "                        ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + layer_name + \".container.level==5000'''\") + \"'''\"\n",
+    "            data_act = {\"env\": env,\n",
+    "                    \"name\": \"Block placement\",\n",
+    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
+    "                    \"condition\": eval(condition)}\n",
+    "\n",
+    "        # - create site objects\n",
+    "        vars()['Act_' + format(i,'02.0f') + layer_name] = Installation(**data_act)\n",
+    "\n",
+    "# Levvel\n",
+    "layer_name = '_levvel'\n",
+    "for i in range(nums):\n",
+    "    for transport_barge in transport_barges:\n",
+    "        # - sites in database (nr i indicates km's from Den Oever haven)\n",
+    "        if i==0:\n",
+    "            condition = \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\"\n",
+    "            data_act = {\"env\": env,\n",
+    "                    \"name\": \"Block placement\",\n",
+    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
+    "                    \"condition\": eval(condition)}\n",
+    "        else:\n",
+    "            condition = \"'''\" + eval(\"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\") + \\\n",
+    "                        ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + layer_name + \".container.level==5000'''\") + \"'''\"\n",
+    "            data_act = {\"env\": env,\n",
+    "                    \"name\": \"Block placement\",\n",
+    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
+    "                    \"condition\": eval(condition)}\n",
+    "\n",
+    "        # - create site objects\n",
+    "        vars()['Act_' + format(i,'02.0f') + layer_name] = Installation(**data_act)\n",
+    "        "
    ]
   },
   {
