Working solution with four layers

--- a/Example 21 - Automatically generated sites and activities.ipynb
+++ b/Example 21 - Automatically generated sites and activities.ipynb
@@ -42,7 +42,7 @@
     "import datetime\n",
     "import json\n",
     "import uuid\n",
-    "import platformçµ\n",
+    "import platform\n",
     "\n",
     "# you need these dependencies (you can get these from anaconda)\n",
     "# package(s) related to the simulation\n",
@@ -684,14 +684,16 @@
     "\n",
     "# Sand\n",
     "layer_name = '_sand'\n",
+    "previous_layer_name = '_clay'\n",
     "for i in range(nums):\n",
     "    for transport_barge in transport_barges:\n",
     "        # - sites in database (nr i indicates km's from Den Oever haven)\n",
     "        if i==0:\n",
-    "            condition = \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\"\n",
+    "            condition =  \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000\" + \\\n",
+    "                        ' and ' + \"Site_KP\" + format(i,'02.0f') + previous_layer_name + \".container.level==5000'''\"\n",
     "            data_act = {\"env\": env,\n",
     "                    \"name\": \"Block placement\",\n",
-    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"origin\": stock_02, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
     "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
     "                    \"condition\": eval(condition)}\n",
     "        else:\n",
@@ -699,7 +701,7 @@
     "                        ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + layer_name + \".container.level==5000'''\") + \"'''\"\n",
     "            data_act = {\"env\": env,\n",
     "                    \"name\": \"Block placement\",\n",
-    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"origin\": stock_02, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
     "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
     "                    \"condition\": eval(condition)}\n",
     "\n",
@@ -708,14 +710,16 @@
     "\n",
     "# Armour\n",
     "layer_name = '_armour'\n",
+    "previous_layer_name = '_sand'\n",
     "for i in range(nums):\n",
     "    for transport_barge in transport_barges:\n",
     "        # - sites in database (nr i indicates km's from Den Oever haven)\n",
     "        if i==0:\n",
-    "            condition = \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\"\n",
+    "            condition =  \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000\" + \\\n",
+    "                        ' and ' + \"Site_KP\" + format(i,'02.0f') + previous_layer_name + \".container.level==5000'''\"\n",
     "            data_act = {\"env\": env,\n",
     "                    \"name\": \"Block placement\",\n",
-    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"origin\": stock_03, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
     "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
     "                    \"condition\": eval(condition)}\n",
     "        else:\n",
@@ -723,7 +727,7 @@
     "                        ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + layer_name + \".container.level==5000'''\") + \"'''\"\n",
     "            data_act = {\"env\": env,\n",
     "                    \"name\": \"Block placement\",\n",
-    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"origin\": stock_03, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
     "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
     "                    \"condition\": eval(condition)}\n",
     "\n",
@@ -732,14 +736,16 @@
     "\n",
     "# Levvel\n",
     "layer_name = '_levvel'\n",
+    "previous_layer_name = '_armour'\n",
     "for i in range(nums):\n",
     "    for transport_barge in transport_barges:\n",
     "        # - sites in database (nr i indicates km's from Den Oever haven)\n",
     "        if i==0:\n",
-    "            condition = \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\"\n",
+    "            condition =  \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000\" + \\\n",
+    "                        ' and ' + \"Site_KP\" + format(i,'02.0f') + previous_layer_name + \".container.level==5000'''\"\n",
     "            data_act = {\"env\": env,\n",
     "                    \"name\": \"Block placement\",\n",
-    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"origin\": stock_04, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
     "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
     "                    \"condition\": eval(condition)}\n",
     "        else:\n",
@@ -747,7 +753,7 @@
     "                        ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + layer_name + \".container.level==5000'''\") + \"'''\"\n",
     "            data_act = {\"env\": env,\n",
     "                    \"name\": \"Block placement\",\n",
-    "                    \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                    \"origin\": stock_04, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
     "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
     "                    \"condition\": eval(condition)}\n",
     "\n",
@@ -854,6 +860,13 @@
     "else:\n",
     "    !start explorer ./sharedstyle.kml"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
